fix: range number inputs too big

--- a/src/style.css
+++ b/src/style.css
@@ -103,6 +103,7 @@ input[type="file"] {
 
 .range > input[type="number"] {
 	flex: none;
+	width: 0;
 	min-width: 4rem;
 }
 
